--- a/src/main/resources/app/hello-view.fxml
+++ b/src/main/resources/app/hello-view.fxml
@@ -3,19 +3,28 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18" fx:controller="app.controllers.HelloController">
+<VBox alignment="CENTER" prefHeight="350.0" prefWidth="450.0" spacing="20.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controllers.HelloController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-   <Pane prefHeight="200.0" prefWidth="200.0">
+   <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="242.0" prefWidth="334.0">
       <children>
-      
-                <Label fx:id="welcomeText" />
-          <Button layoutX="67.0" layoutY="174.0" onAction="#createFuncionario" text="Cadastrar" />
-         <Button layoutX="-12.0" layoutY="174.0" mnemonicParsing="false" text="Entrar" />
+
+          <Label fx:id="prompt" layoutX="99.0" layoutY="180.0" prefHeight="17.0" prefWidth="136.0" />
+         <TextField fx:id="inputName" layoutX="96.0" layoutY="22.0" promptText="Name" />
+         <TextField fx:id="inputCode" layoutX="96.0" layoutY="59.0" promptText="CODE" />
+         <TextField fx:id="inputCargo" layoutX="96.0" layoutY="96.0" promptText="Cargo" />
+         <ToolBar layoutX="70.0" layoutY="188.0" prefHeight="40.0" prefWidth="200.0">
+            <items>
+               <Button mnemonicParsing="false" onAction="#loginFuncionario" text="Login In" />
+               <Button mnemonicParsing="false" onAction="#createFuncionario" text="Sign In" />
+            </items>
+         </ToolBar>
       </children>
    </Pane>
 
