--- a/src/main/resources/app/hello-view.fxml
+++ b/src/main/resources/app/hello-view.fxml
@@ -4,32 +4,44 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controllers.HelloController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controllers.HelloController">
    <children>
-      <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="450.0" spacing="20.0">
-          <padding>
-              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-          </padding>
-         <TextField fx:id="inputName" prefHeight="11.0" prefWidth="410.0" promptText="Name" />
-         <TextField fx:id="inputCode" promptText="CODE" />
-         <TextField fx:id="inputCargo" promptText="Cargo" />
-         <TextField fx:id="inputSalario" promptText="Salario" />
-         <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#loginFuncionario" prefHeight="39.0" prefWidth="127.0" text="Login In" textFill="#682dc2">
-            <font>
-               <Font name="Segoe UI Semibold" size="14.0" />
-            </font>
-         </Button>
-         <Button alignment="CENTER" defaultButton="true" mnemonicParsing="false" onAction="#createFuncionario" prefHeight="39.0" prefWidth="131.0" text="Sign In" textAlignment="CENTER">
-            <font>
-               <Font name="Segoe UI Semibold" size="14.0" />
-            </font>
-         </Button>
-         <Label fx:id="prompt" alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="622.0" textAlignment="CENTER" />
-      
-                        </VBox>
+      <ImageView fitHeight="900.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assets/image/background.jpg" />
+         </image>
+      </ImageView>
+      <VBox layoutX="69.0" layoutY="48.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="20.0">
+         <children>
+            <TextField fx:id="inputName" prefHeight="11.0" prefWidth="410.0" promptText="Name">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </TextField>
+            <TextField fx:id="inputCode" promptText="CODE" />
+            <TextField fx:id="inputCargo" promptText="Cargo" />
+            <TextField fx:id="inputSalario" promptText="Salario" />
+            <Button alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#loginFuncionario" prefHeight="40.0" prefWidth="160.0" text="Login In" textFill="#672fc2">
+               <font>
+                  <Font name="Segoe UI Semibold" size="16.0" />
+               </font>
+            </Button>
+            <Button alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#createFuncionario" prefHeight="40.0" prefWidth="160.0" text="Sign In" textAlignment="CENTER" textFill="#5516c9" textOverrun="WORD_ELLIPSIS">
+               <font>
+                  <Font name="Segoe UI Semibold" size="16.0" />
+               </font>
+            </Button>
+            <Label fx:id="prompt" alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="622.0" textAlignment="CENTER" />
+         </children>
+         <padding>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </padding>
+      </VBox>
    </children>
 </Pane>
