--- a/src/main/resources/app/hello-view.fxml
+++ b/src/main/resources/app/hello-view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -19,14 +20,14 @@
       </ImageView>
       <VBox layoutX="69.0" layoutY="48.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="20.0">
          <children>
-            <TextField fx:id="inputName" prefHeight="11.0" prefWidth="410.0" promptText="Name">
+            <TextField fx:id="inputName" alignment="CENTER" prefHeight="11.0" prefWidth="410.0" promptText="NAME">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
             </TextField>
-            <TextField fx:id="inputCode" promptText="CODE" />
-            <TextField fx:id="inputCargo" promptText="Cargo" />
-            <TextField fx:id="inputSalario" promptText="Salario" />
+            <TextField fx:id="inputCode" alignment="CENTER" promptText="CODE" />
+            <TextField fx:id="inputCargo" alignment="CENTER" promptText="CARGO" />
+            <TextField fx:id="inputSalario" alignment="CENTER" promptText="SALARIO" />
             <Button alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#loginFuncionario" prefHeight="40.0" prefWidth="160.0" text="Login In" textFill="#672fc2">
                <font>
                   <Font name="Segoe UI Semibold" size="16.0" />
@@ -36,8 +37,14 @@
                <font>
                   <Font name="Segoe UI Semibold" size="16.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="CROSSHAIR" />
+               </cursor>
             </Button>
-            <Label fx:id="prompt" alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="622.0" textAlignment="CENTER" />
+            <Label fx:id="prompt" alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="622.0" textAlignment="CENTER" textFill="#ac87cd" textOverrun="WORD_ELLIPSIS">
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font></Label>
          </children>
          <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
