--- a/src/main/resources/app/funcionarios.fxml
+++ b/src/main/resources/app/funcionarios.fxml
@@ -4,7 +4,8 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -26,7 +27,18 @@
                   <Font name="Segoe UI Semibold" size="18.0" />
                </font>
             </TextField>
-            <ListView fx:id="listOfFuncionarios" prefHeight="200.0" prefWidth="200.0" />
+            <TableView fx:id="FuncionariosInfo" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: transparent;">
+              <columns>
+                <TableColumn fx:id="NameColumn" prefWidth="75.0" style="-fx-background-color: transparent;" text="Funcionário" />
+                <TableColumn fx:id="CodeColumn" prefWidth="75.0" text="Código" />
+                  <TableColumn fx:id="CargoColumn" prefWidth="75.0" text="Cargo" />
+                  <TableColumn fx:id="DependentesColumn" prefWidth="75.0" text="Dependentes" />
+                  <TableColumn fx:id="SalaryColumn" prefWidth="75.0" text="Salário" />
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
             <Button alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#deleteFuncionario" prefHeight="39.0" prefWidth="134.0" text="Delete" textAlignment="CENTER" textFill="#5516c9" textOverrun="WORD_ELLIPSIS">
                <font>
                   <Font name="Segoe UI Semibold" size="16.0" />
