--- a/src/main/resources/app/log-in.fxml
+++ b/src/main/resources/app/log-in.fxml
@@ -34,7 +34,7 @@
                </opaqueInsets>
             </TextField>
             <TextField fx:id="inputCode" alignment="CENTER" promptText="CODE" />
-            <Button alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#createFuncionario" prefHeight="40.0" prefWidth="160.0" text="Log In" textAlignment="CENTER" textFill="#5516c9" textOverrun="WORD_ELLIPSIS">
+            <Button alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#loginFuncionario" prefHeight="40.0" prefWidth="160.0" text="Log In" textAlignment="CENTER" textFill="#5516c9" textOverrun="WORD_ELLIPSIS">
                <font>
                   <Font name="Segoe UI Semibold" size="16.0" />
                </font>
